[FIX] account: fix alignment issue in invoice report
Steps to reproduce:
1. Install Accounting module.
2. Change document layout to 'Boxed' from Settings.
3. Print any invoice → notice that `total section` is shifted downward compared
   to other PDF layouts.

Issue:
The amount total section in the invoice PDF is not aligned properly due to
extra margin.

Solution:
Remove the unnecessary margin to ensure the total section is aligned correctly
across all layouts.

opw - 4911228

--- a/addons/account/static/src/css/report_invoice.css
+++ b/addons/account/static/src/css/report_invoice.css
@@ -20,3 +20,7 @@
 .tax_computation_company_currency {
     margin-bottom: 5px;
 }
+
+.clearfix {
+    clear: both;
+}
